fixed scrollbar for user-info and recent-post

--- a/src/app/post-main/component/post-main/post-main.component.scss
+++ b/src/app/post-main/component/post-main/post-main.component.scss
@@ -34,7 +34,7 @@ app-recent-visited-post {
     height: calc(100vh - var(--header_size));
     top: calc(var(--header_size) + 10px);
     background-color: var(--neutral);
-    border-radius: 10px;
+    // border-radius: 10px;
     overflow: hidden;
     scrollbar-gutter: stable;
     background-clip: content-box;
